tests/macros/expand/mask.rs
fn main() {
    let q = requestty::questions![Expand { mask: todo!() }];
}
